Address some deprecations